@@ -88,6 +88,7 @@ pycurl_release_thread(PyThreadState *state)
 
 #ifdef PYCURL_NEED_OPENSSL_TSL
 
+#if OPENSSL_VERSION_NUMBER < 0x10100000
 static PyThread_type_lock *pycurl_openssl_tsl = NULL;
 
 static void
@@ -100,15 +101,27 @@ pycurl_ssl_lock(int mode, int n, const char * file, int line)
     }
 }
 
+#if OPENSSL_VERSION_NUMBER >= 0x10000000
+/* use new CRYPTO_THREADID API. */
+static void
+pycurl_ssl_threadid_callback(CRYPTO_THREADID *id)
+{
+    CRYPTO_THREADID_set_numeric(id, (unsigned long)PyThread_get_thread_ident());
+}
+#else
+/* deprecated CRYPTO_set_id_callback() API. */
 static unsigned long
 pycurl_ssl_id(void)
 {
     return (unsigned long) PyThread_get_thread_ident();
 }
+#endif
+#endif
 
 PYCURL_INTERNAL int
 pycurl_ssl_init(void)
 {
+#if OPENSSL_VERSION_NUMBER < 0x10100000
     int i, c = CRYPTO_num_locks();
 
     pycurl_openssl_tsl = PyMem_New(PyThread_type_lock, c);
@@ -130,18 +143,28 @@ pycurl_ssl_init(void)
         }
     }
 
+#if OPENSSL_VERSION_NUMBER >= 0x10000000
+    CRYPTO_THREADID_set_callback(pycurl_ssl_threadid_callback);
+#else
     CRYPTO_set_id_callback(pycurl_ssl_id);
+#endif
     CRYPTO_set_locking_callback(pycurl_ssl_lock);
+#endif
     return 0;
 }
 
 PYCURL_INTERNAL void
 pycurl_ssl_cleanup(void)
 {
+#if OPENSSL_VERSION_NUMBER < 0x10100000
     if (pycurl_openssl_tsl) {
         int i, c = CRYPTO_num_locks();
 
+#if OPENSSL_VERSION_NUMBER >= 0x10000000
+        CRYPTO_THREADID_set_callback(NULL);
+#else
         CRYPTO_set_id_callback(NULL);
+#endif
         CRYPTO_set_locking_callback(NULL);
 
         for (i = 0; i < c; ++i) {
@@ -151,6 +174,7 @@ pycurl_ssl_cleanup(void)
         PyMem_Free(pycurl_openssl_tsl);
         pycurl_openssl_tsl = NULL;
     }
+#endif
 }
 #endif
 
